[package]
name = "solana-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web框架
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# MongoDB
mongodb = { version = "2", features = ["tokio-runtime"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio", "libz"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 配置管理
config = "0.14"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 环境变量
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"